Fix social icons vertical align.

--- a/src/sass/blocks/_social.scss
+++ b/src/sass/blocks/_social.scss
@@ -89,6 +89,7 @@ $social_color: (
 		border-radius: 50rem;
 		border: 1px solid #e6e6e6;
 		background-color: #fff;
+		display: flex;
 		width: 40px;
 		height: 40px;
 		padding: 0;
